catkin_ws/logs/backend/build.make.716.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:520:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:274:51: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints().size();i++)
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:286:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getBadFrameCounter() == badFrameCnt)
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void logPoseGraphEnd(SLAM::Frame, SLAM::G2oPoseGraph)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:352:40: error: ‘toNode’ was not declared in this scope
  cout << " total number of node ? " << toNode <<  endl; 
                                        ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
